# canonn_matrix

matrix_master/: CMakeLists.txt
matrix_master/src/: master.cpp
matrix_slave/: CMakeLists.txt
matrix_slave/src/: slave.cpp
